tests/fixtures/valid/nested_defn.airl
;; EXPECT: 25
(defn square
  :sig [(x : i32) -> i32]
  :intent "square a number"
  :requires [(valid x)]
  :ensures [(valid result)]
  :body (* x x))
(defn add-squares
  :sig [(a : i32) (b : i32) -> i32]
  :intent "sum of squares"
  :requires [(valid a) (valid b)]
  :ensures [(valid result)]
  :body (+ (square a) (square b)))
(add-squares 3 4)
